# src/main/java/com/example/bankcards/dto/UserDto.java
@@ -6,12 +6,14 @@ import lombok.experimental.FieldDefaults;
 
 import java.io.Serializable;
 import java.time.Instant;
+import java.util.List;
 
 /**
  * DTO for {@link com.example.bankcards.entity.User}
  */
 @FieldDefaults(level = AccessLevel.PRIVATE)
 @Builder
+@Getter@Setter
 @AllArgsConstructor
 @NoArgsConstructor
 public class UserDto {
@@ -24,4 +26,10 @@ public class UserDto {
     String middleName;
     @NotNull
     String lastName;
+    Boolean isActive;
+    List<CardDto> cards;
+
+    public String getFullName(){
+        return String.format("%s %s%n", firstName, lastName);
+    }
 }
